2010-06-04  Sebastien Pouliot  <sebastien@ximian.com>

	* AvoidMethodsWithSideEffectsInConditionalCodeRule.cs:
	* EnsureLocalDisposalRule.cs:
	* ReviewInconsistentIdentityRule.cs:
 		Apply AvoidUnnecessarySpecializationRule

2010-05-08  Sebastien Pouliot  <sebastien@ximian.com>

	* CheckParametersNullityInVisibleMethodsRule.cs: Fix when 
	"ldarg 0" is used instead of the, much more common, "ldarg_0"
	* MethodCanBeMadeStaticRule.cs: Fix when "ldarg 0" is used 
	instead of the, much more common, "ldarg_0"

2010-05-01  Sebastien Pouliot  <sebastien@ximian.com>

	* AvoidMethodsWithSideEffectsInConditionalCodeRule.cs: Apply 
	AvoidRepetitiveCallsToPropertiesRule on MethodDefinition::
	get_DeclaringType and get_Name and TypeReference::Get_FullName
	* ProvideCorrectArgumentsToFormattingMethodsRule.cs: Apply Avoid
	RepetitiveCallsToPropertiesRule on MethodDefinition::Parameters.
	Check (expectedParameters == 0) only once
	* ProvideValidXmlStringRule.cs: Apply AvoidRepetitiveCallsTo
	PropertiesRule on MethodDefinition::get_Parameters
	* ProvideValidXPathExpressionRule.cs: Remove duplicate check on
	SelectSingleNode
	* ReviewInconsistentIdentityRule.cs: Apply AvoidRepetitiveCallsTo
	PropertiesRule on Type::get_FullName

2010-04-28  Sebastien Pouliot  <sebastien@ximian.com>

	* MethodCanBeMadeStaticRule.cs: Re-order conditions from the
	fastest to the slowest to return DoesNotApply. Ignore methods
	decorated with [Conditional("X")] since they could be empty (i.e.
	not using 'this') in IL while impossible, source wise, to change
	to static.
	* ProvideCorrectRegexPatternRule.cs: Change TryComputeArraySize
	to static (self-test)

2010-04-25  Sebastien Pouliot  <sebastien@ximian.com>

	* DisposableFieldsShouldBeDisposedRule.cs: Handle compiler 
	generated fields (e.g. used in C# 3 automatic properties).

2010-04-17  Sebastien Pouliot  <sebastien@ximian.com>

	* ProvideCorrectRegexPatternRule.cs: Make rule consistent in case